unpackaged/main/default/objects/litify_docs__File_Info_Version__c/litify_docs__File_Info_Version__c.object-meta.xml
<CustomObject>
    <description>Represents a version of a file.</description>
    <label>File Info Version</label>
    <nameField>
        <displayFormat>VERSION-{000000}</displayFormat>
        <label>File Info Version Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Info Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>