unpackaged/main/default/objects/litify_docs__File_Info_Version__c/fields/litify_docs__File_Info__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__File_Info__c</fullName>
    <description>The file record that this version belongs to.</description>
    <label>File Info</label>
    <referenceTo>litify_docs__File_Info__c</referenceTo>
    <relationshipLabel>File Info Versions</relationshipLabel>
    <relationshipName>File_Info_Versions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>