unpackaged/main/default/objects/litify_docs__File_Info_Version__c/fields/litify_docs__File_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__File_Type__c</fullName>
    <description>The file&#39;s MIME type.</description>
    <inlineHelpText>The file&#39;s MIME type.</inlineHelpText>
    <label>File Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>