unpackaged/main/default/objects/litify_docs__File_Info_Version__c/fields/litify_docs__Source__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Source__c</fullName>
    <description>The file&#39;s source.</description>
    <inlineHelpText>The file&#39;s source.</inlineHelpText>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>