unpackaged/main/default/objects/litify_docs__File_Info_Version__c/fields/litify_docs__Version_Number__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Version_Number__c</fullName>
    <description>The version number.</description>
    <label>Version</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>